[gd_scene load_steps=5 format=3 uid="uid://d0xq8htieptga"]

[ext_resource type="Script" path="res://UI/MainScreen/mainscreen.gd" id="1_1sk3e"]
[ext_resource type="Texture2D" uid="uid://ba3xxjpuiwskt" path="res://UI/Theme/environment-preview.png" id="1_tdutl"]
[ext_resource type="Theme" uid="uid://da1skl5aevho5" path="res://UI/Theme/new_theme.tres" id="2_bh274"]
[ext_resource type="Texture2D" uid="uid://cq4gnrjpi8mq6" path="res://UI/Theme/player-run-4.png" id="3_rvupi"]

[node name="Mainmenu" type="CanvasLayer"]
process_mode = 3
layer = 2
script = ExtResource("1_1sk3e")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -287.0
offset_top = -69.0
offset_right = 289.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_tdutl")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_bh274")

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play
"

[node name="SettingsButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "SETTING
"

[node name="ExitButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit
"

[node name="Player-run-4" type="Sprite2D" parent="."]
position = Vector2(240, 232)
texture = ExtResource("3_rvupi")

[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
